Fix description section overflow

--- a/src/app/description/description.component.scss
+++ b/src/app/description/description.component.scss
@@ -3,4 +3,5 @@
 :host {
   padding: $unit;
   flex: 1 1;
+  overflow-y: auto;
 }
